created header and footer in index.html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,35 @@
 <html>
 <head>
 	<title>WEB ANNOTATIONS</title>
+	<link rel="stylesheet" type="text/css" href="bootstrapV4/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="bootstrapV4/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-<h1>AUDIO ANNOTATIONS</h1>
-<audio controls>
-  <source src="ddcheck.mkv" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
+<div class="fixed-header">
+  	<div class="container">
+    	<nav>
+      	<a href="#">Home</a>
+      	<a href="#">About</a>
+      	<a href="#">Products</a>
+      	<a href="#">Services</a>
+      	<a href="#">Contact Us</a>
+    	</nav>
+    </div>
+</div>
+       
+
+<div><h1>AUDIO ANNOTATIONS</h1></div>
+<div>
+	<audio controls>
+  		<source src="ddcheck.mkv" type="audio/mpeg">
+			Your browser does not support the audio element.
+	</audio>
+</div>
+
+<div class="fixed-footer">
+    <div class="container footer-text">Copyright &copy; 2018 Servelots Info Tech</div>        
+</div>
 
 </body>
 </html>
