--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
 </head>
 <body>
 <h1>AUDIO ANNOTATIONS</h1>
-<audio controls>
-  <source src="ddcheck.mkv" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
+
+<div>
+	<h2 style="background-color:yellow">Street Vendors audio English version</h2>
+	<audio controls>
+  		<source src="F:/WebAnno/Street_vendors_Sound/Street_vendors_Sound_Eng_24Apr18.mp3" type="audio/mpeg">
+	</audio>
+</div>
+
+<div>
+	<h2>Street Vendors audio Kannada version</h2>
+	<audio controls>
+ 		<source src="F:/WebAnno/Street_vendors_Sound/Street_vendors_Sound_Kan_24Apr18.mp3" type="audio/mpeg">
+	</audio>
+</div>
 
 </body>
 </html>
