modified index and style file i.e adding a tag icon

--- a/index.html
+++ b/index.html
@@ -24,28 +24,35 @@
 
 
 <div align="center">
-<div><h1>AUDIO ANNOTATIONS</h1></div>
+	<div><h1>AUDIO ANNOTATIONS</h1></div>
 
-<div class="icons"> <img src='images/tag_icon.jpeg' /></div>
-<div class=aud1>
 	<h5>Street Vendors audio English version</h5>
-	<audio controls>
-  		<source src="F:/WebAnno/Street_vendors_Sound/Street_vendors_Sound_Eng_24Apr18.mp3" type="audio/mpeg">
-	</audio>
-</div>
+
+	<div class=aud1>
+		<div class="icons"><a href="http://janastu.org"> <img src='images/tag_icon.jpeg' /></a>
+			<span class="tooltip">Tag</span>
+		</div>
+		<audio controls>
+  			<source src="F:/WebAnno/Street_vendors_Sound/Street_vendors_Sound_Eng_24Apr18.mp3" type="audio/mpeg">
+		</audio>
+	</div>
 
 
-<div class="icons"> <img src='images/tag_icon.jpeg' /></div>
-<div class=aud1>
 	<h5>Street Vendors audio Kannada version</h5>
-	<audio controls>
- 		<source src="F:/WebAnno/Street_vendors_Sound/Street_vendors_Sound_Kan_24Apr18.mp3" type="audio/mpeg">
-	</audio>
-</div>
 
-<div class="fixed-footer">
-    <div class="container footer-text">Copyright &copy; 2018 Servelots Info Tech</div>        
-</div>
+	<div class=aud1>
+		<div class="icons"> <img src='images/tag_icon.jpeg' />
+			<span class="tooltip">Tag</span>
+		</div>
+		<audio controls>
+ 			<source src="F:/WebAnno/Street_vendors_Sound/Street_vendors_Sound_Kan_24Apr18.mp3" type="audio/mpeg">
+		</audio>
+	</div>
 
+	<div class="fixed-footer">
+    	<div class="container footer-text">Copyright &copy; 2018 Servelots Info Tech</div>        
+	</div>
+
+</div>
 </body>
 </html>
