--- a/annotation/index.html
+++ b/annotation/index.html
@@ -47,23 +47,87 @@
             </button>
           </span>
         </div><br>
-        <ul class="nav nav-pills nav-stacked">
-          <li class="active"><div class="container"><h6>My Notes</h6> </div></li>
-          <!--li><div class="container"><h6>Adding the annotations </h6> </div></li-->
-        </ul><br>
 
-        <div class="anno-sidebar-text">
-            <ul>
-              
-            </ui>
-        </div>
 
+        <div class="container annotation-preview">
+        <h3>Look for annotation</h3>
+        <div id="annotations">
+          <!--ul class="nav nav-pills nav-stacked">
+            <li class="list-of-annotations"> 
+              <div class="anno-sidebar-text">
+                <ul class="annotation-header">
+                  <li class="annotation-text">
+                      First Annotation
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul><br>
+              <ul class="nav nav-pills nav-stacked">
+                <li class="list-of-annotations"> 
+                  <div class="anno-sidebar-text">
+                    <ul class="annotation-header">
+                      <li class="annotation-text">
+                          <p>Second Annotation</p>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+              <br-->
+          </div>
       </div>
-  </div>
+    </div>
+</div>
 </div>
 
+<footer class="container-fluid">
+  <p>Servelots Infotech Pvt Ltd Bengaluru</p>
+</footer>
+</body>
+<script>
+  var getdata=function() {
 
-  <script type="text/javascript" src="src/assets/js/js_libraries/jquery.js"></script>
+    var archive = [],
+        keys = Object.keys(localStorage),
+        i = 0, key;
+
+    for (; key = keys[i]; i++) {
+        archive.push( localStorage.getItem(key));
+    }
+
+    return archive;
+}
+
+var annoTemplate=function(content){
+  return `<ul class="nav nav-pills nav-stacked">
+              <li class="list-of-annotations"> 
+                <div class="anno-sidebar-text">
+                  <ul class="annotation-header">
+                    <li class="annotation-text">
+                        ${content.text + " " +content.quote}
+                    </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          <br>`
+}
+
+addTemplate=function(){
+  var data=getdata();
+  console.log(data);
+  var side=document.getElementById("annotations")
+  //var test="hello";
+  for(var i=0;i<data.length;i++){
+  side.appendChild(document.createRange().createContextualFragment(annoTemplate(JSON.parse(data[i]))))
+}
+}
+
+addTemplate();
+</script>
+
+  <script type="text/javascript" src="src/assets/js/js_libraries/jquery.js"> </script>
   <script type="text/javascript" src="src/assets/js/js_libraries/highlighter.js"></script>
   <script type="text/javascript" src="src/assets/js/js_libraries/annotator-full.1.2.10/annotator-full.min.js"></script>
   <script type="text/javascript" src="src/assets/js/js_libraries/anno.touch/annotator.touch.js"></script>
