Adding the suggest field in the annotation editor0

--- a/annotation/index.html
+++ b/annotation/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>WEB-Annotation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="src/assets/css/annotorious.css" />
+  <script type="text/javascript" src="src/assets/js/annotorious.min.js"></script>
   <!--link rel="stylesheet" href="src/assets/css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="src/assets/js/js_libraries/annotator-full.1.2.10/annotator.min.css" />
   <link rel="stylesheet" href="src/assets/js/js_libraries/anno.touch/annotator.touch.css" /-->
- 
+   
+
+    
+
 </head>
 
 
@@ -35,6 +40,10 @@
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
               <p id="user"></p>
+              <img src="src/assets/images/d.jpg" width="200" height="200">
+
+
+              <img src="src/assets/images/test-image.jpg" width="500" height="400">
 
            </div>
         </div>
@@ -87,7 +96,8 @@
   <p>Servelots Infotech Pvt Ltd Bengaluru</p>
 </footer>
 </body>
-<script>
+
+<!--script>
   var getdata=function() {
 
     var archive = [],
@@ -127,7 +137,7 @@ addTemplate=function(){
 }
 
 //addTemplate();
-</script>
+</script-->
 
   <!--script type="text/javascript" src="src/assets/js/js_libraries/jquery.js"> </script>
   <script type="text/javascript" src="src/assets/js/js_libraries/highlighter.js"></script>
@@ -135,6 +145,7 @@ addTemplate=function(){
   <script type="text/javascript" src="src/assets/js/js_libraries/anno.touch/annotator.touch.js"></script>
   <script  type="text/javascript" src="src/assets/js/js_libraries/annotator.offline.min.js"></script-->
   <script type="text/javascript" src="src/assets/js/mynotes.js"></script>
+ 
 
 </body>
 </html>
