adding bundle.min.js file

--- a/annotation/index.html
+++ b/annotation/index.html
@@ -142,7 +142,7 @@ addTemplate=function(){
   <script type="text/javascript" src="src/assets/js/js_libraries/annotator-full.1.2.10/annotator-full.min.js"></script>
   <script type="text/javascript" src="src/assets/js/js_libraries/anno.touch/annotator.touch.js"></script>
   <script  type="text/javascript" src="src/assets/js/js_libraries/annotator.offline.min.js"></script-->
-  <script type="text/javascript" src="src/assets/js/mynotes.js"></script>
+  <script type="text/javascript" src="src/assets/js/build.js"></script>
  
 
 </body>
