--- a/annotation/index.html
+++ b/annotation/index.html
@@ -4,6 +4,8 @@
   <title>WEB-Annotation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="">
+
   <!--link rel="stylesheet" type="text/css" href="src/assets/css/annotorious.css" /-->
   <!--script type="text/javascript" src="src/assets/js/annotorious.min.js"></script-->
   <!--link rel="stylesheet" href="src/assets/css/styles.css">
